Fix bug that prevented fetching images that had space in filename e.g. 'dal palak.png'